objects/LAT_MasivePaymentDeadlineLine__c.object
<CustomObject>
    <fields>
        <fullName>LAT_AccountAN8__c</fullName>
        <label>AN8</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cliente</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>MasivePaymentDeadlineHeaders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LAT_Executed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ejecutado</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LAT_Header__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Header</label>
        <referenceTo>LAT_MasivePaymentDeadlineHeader__c</referenceTo>
        <relationshipLabel>MasivePaymentDeadlineLine</relationshipLabel>
        <relationshipName>MasivePaymentDeadlineLine</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LAT_NewValue__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Nuevo Valor</label>
        <referenceTo>UDC__c</referenceTo>
        <relationshipLabel>MasivePaymentDeadlineLine (Nuevo Valor)</relationshipLabel>
        <relationshipName>MasivePaymentDeadlineLine</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LAT_OldValue__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Antiguo Valor</label>
        <referenceTo>UDC__c</referenceTo>
        <relationshipName>MasivePaymentDeadlineHeaders</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>MasivePaymentDeadlineLine</label>
    <nameField>
        <displayFormat>MPC-{0000}</displayFormat>
        <label>PaymentDeadline Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MasivePaymentDeadlineLine</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>